--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,8 @@
     margin: 0;
     padding: 0;
 }
-body{
+
+body {
     font-family: "Roboto", sans-serif;
 }
 
@@ -32,7 +33,6 @@ li {
     cursor: pointer;
     background-color: rgb(255, 255, 255);
 }
-
 
 .nav-hover {
     padding: 30px;
@@ -63,7 +63,7 @@ footer a {
     color: black;
 }
 
-.logoRed{
+.logoRed {
     width: 40px;
 }
 
@@ -135,7 +135,7 @@ h2 {
     padding: 16px;
 }
 
-.botonWpp{
+.botonWpp {
     text-decoration: none;
     display: inline-block;
     background-color: darkgreen;
@@ -182,7 +182,7 @@ textarea {
 
 /* emergencia */
 
-.emergencia{
+.emergencia {
     display: flex;
     justify-content: center;
     align-content: space-between;
@@ -190,12 +190,34 @@ textarea {
     margin: 50px 0px;
 }
 
-/* media queries */
+/* RESPONSIVE*/
 
-/* mobile */
-@media (max-width: 430px) {
-    .nosotros {
+/*MOVIL*/
+@media (min-width: 340px) and (max-width: 767px) {
+    /* nosotros */
+    .nosotros{
+        display: flex;
+        flex-direction: column;
+        img{
+            width: 100%;
+        }
+    }
+
+    /* paseadores */
+    .grupoPaseador{
+        display: flex;
+        flex-direction: column;
+        .card{
+            width: fit-content;
+        }
+    }
+
+    /* emergencia */
+    .emergencia{
         display: flex;
         flex-direction: column;
     }
 }
+
+/* TABLET 768px*/
+@media (min-width: 768px) and (max-width: 1024px) {}
