--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,5 +6,7 @@
 //componentes
 
 @use "./partials/components/header";
+@use "./partials/components/banner";
+@use "./partials/components/contenido";
 @use "./partials/components/cards";
 @use "./partials/components/footer";
