--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,83 @@ nav ul a:hover {
   padding: 30px;
 }
 
+.banner {
+  background-image: url(../images/banner.jpg);
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 200px;
+}
+
+.tituloPagina {
+  font-size: 100px;
+}
+.tituloPagina h2 {
+  background-color: #fafafa;
+  margin: 50px;
+}
+
+.explicacion-paseos {
+  text-align: center;
+  margin: 0px 50px;
+}
+
+.nosotros {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin: 50px;
+}
+.nosotros img {
+  width: 800px;
+}
+
+form {
+  margin-top: 30px;
+  margin-left: 100px;
+}
+
+label {
+  display: flex;
+  margin: 10px;
+  font-weight: bold;
+  font-size: larger;
+}
+
+input {
+  display: block;
+  width: 300px;
+  height: 30px;
+}
+
+textarea {
+  display: flex;
+  width: 500px;
+}
+
+.boton {
+  width: 100px;
+  margin: 50px 30px;
+  padding: 20px;
+  background-color: rgb(255, 0, 0);
+  color: white;
+  border: none;
+  display: inline-block;
+  align-content: center;
+}
+
+.emergencia {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: space-between;
+  gap: 40px;
+  margin: 50px 0px;
+}
+
 .presentacion-paseadores {
   text-align: center;
   margin: 0px 50px;
