intento de responsive 2

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,3 +10,4 @@
 @use "./partials/components/contenido";
 @use "./partials/components/cards";
 @use "./partials/components/footer";
+@use "./partials/components/responsive";
