--- a/scss/partials/components/_responsive.scss
+++ b/scss/partials/components/_responsive.scss
@@ -1,42 +1,87 @@
 // RESPONSIVE
 
 // MOVIL
-@media (min-width: 340px) and (max-width: 767px) {
 
-    //inicio
-    .container-fluid {
-        width: 50%;
-
+@media (max-width: 430px) {
+    body {
+        margin: 0px;
+    }
+    .nav-hover{
+        padding: 5px;
+        align-items: center;
+        justify-items: center;
     }
 
-    // nosotros
-    .nosotros {
-        display: flex;
-        flex-direction: column;
-
-        img {
-            width: 50%;
+    //INICIO 
+    .tituloPagina {
+        font-weight: 25px;
+        h2{
+            font-size: 50px;
         }
     }
 
-    // paseadores 
-    .grupoPaseador {
-        display: flex;
-        flex-direction: column;
+    //NOSOTROS
 
-        .card {
-            width: 50%;
+    .titulos{
+        padding: 15px;
+    }
+
+   .nosotros{
+        flex-direction: column;
+        align-items: center;
+        p{
+            text-align: center;
+        }
+        img{
+            width: 150%;
         }
     }
 
-    // emergencia 
-    .emergencia {
-        display: flex;
+    //PASEADORES
+
+    .grupoPaseador{
         flex-direction: column;
+        .card{
+            width: 100%;
+        }
+    }
+
+    //CONTACTO
+
+    form{
+        margin: 20px;
+    }
+    input{
+        width: 400px;
+    }
+    textarea{
+        width: 400px;
+    }
+
+    //EMERGENCIA 
+
+    .emergencia{
+        flex-direction: column;
+        .map{
+            width: 400px;
+        }
+    }
+
+
+    footer{
+        flex-direction: column;
+        padding: 10px;
+        gap: 15px;
     }
 }
 
-// NO SE QUE ESTOY HACIENDO MAL PARA QUE ESTAS DIMENSIONES NO ME LO TOME
 
-// TABLET 768px
-@media (min-width: 768px) and (max-width: 1024px) {}
+// TABLET 
+@media (min-width: 431px) and (max-width: 768px) {
+    .grid-container {
+        display: grid;
+        align-items: center;
+        justify-content: space-around;
+        gap: 27px;
+    }
+}
