--- a/styles/style.css
+++ b/styles/style.css
@@ -71,6 +71,7 @@ nav ul .nav-link:hover {
 
 .titulos {
   text-align: center;
+  padding: 20px;
 }
 
 .nosotros {
@@ -186,27 +187,67 @@ footer a {
   width: 40px;
 }
 
-@media (min-width: 340px) and (max-width: 767px) {
-  .container-fluid {
-    width: 50%;
+@media (max-width: 430px) {
+  body {
+    margin: 0px;
+  }
+  .nav-hover {
+    padding: 5px;
+    align-items: center;
+    justify-items: center;
+  }
+  .tituloPagina {
+    font-weight: 25px;
+  }
+  .tituloPagina h2 {
+    font-size: 50px;
+  }
+  .titulos {
+    padding: 15px;
   }
   .nosotros {
-    display: flex;
     flex-direction: column;
+    align-items: center;
+  }
+  .nosotros p {
+    text-align: center;
   }
   .nosotros img {
-    width: 50%;
+    width: 150%;
   }
   .grupoPaseador {
-    display: flex;
     flex-direction: column;
   }
   .grupoPaseador .card {
-    width: 50px;
+    width: 100%;
+  }
+  form {
+    margin: 20px;
+  }
+  input {
+    width: 400px;
+  }
+  textarea {
+    width: 400px;
   }
   .emergencia {
-    display: flex;
     flex-direction: column;
+  }
+  .emergencia .map {
+    width: 400px;
+  }
+  footer {
+    flex-direction: column;
+    padding: 10px;
+    gap: 15px;
+  }
+}
+@media (min-width: 431px) and (max-width: 768px) {
+  .grid-container {
+    display: grid;
+    align-items: center;
+    justify-content: space-around;
+    gap: 27px;
   }
 }
 
