--- a/scss/partials/components/_responsive.scss
+++ b/scss/partials/components/_responsive.scss
@@ -6,7 +6,9 @@
     body {
         margin: 0px;
     }
-    .nav-hover{
+
+    .nav-hover {
+        background-color: black;
         padding: 5px;
         align-items: center;
         justify-items: center;
@@ -15,47 +17,105 @@
     //INICIO 
     .tituloPagina {
         font-weight: 25px;
-        h2{
+
+        h2 {
             font-size: 50px;
         }
     }
 
     //NOSOTROS
 
-    .titulos{
+    .titulos {
         padding: 15px;
     }
 
-   .nosotros{
+    .nosotros {
         flex-direction: column;
         align-items: center;
-        p{
+
+        p {
             text-align: center;
         }
-        img{
+
+        img {
             width: 150%;
         }
     }
 
     //PASEADORES
 
-    .grupoPaseador{
+    .grupoPaseador {
         flex-direction: column;
-        .card{
+
+        .card {
             width: 100%;
         }
     }
 
     //CONTACTO
 
-    form{
+    form {
         margin: 20px;
     }
-    input{
+
+    input {
         width: 400px;
     }
-    textarea{
+
+    textarea {
         width: 400px;
+    }
+
+    //EMERGENCIA 
+
+    .emergencia {
+        flex-direction: column;
+
+        .map {
+            width: 400px;
+        }
+    }
+
+    footer {
+        flex-direction: column;
+        padding: 10px;
+        gap: 15px;
+    }
+}
+
+// TABLET 
+@media (min-width: 431px) and (max-width: 768px) {
+    body {
+        margin: 0px;
+    }
+
+    .nav-hover {
+        background-color: black;
+        padding: 10px;
+        align-items: center;
+        justify-items: center;
+    }
+
+    //NOSOTROS 
+
+    .nosotros{
+        flex-direction: column;
+        align-items: center;
+        img{
+            width: 100%;
+        }
+    }
+
+    //PASEADORES
+
+    .grupoPaseador{
+            display: grid;
+            grid-template-areas: 
+                "card card";
+                .card{
+                    width: 100%;
+                }
+    
     }
 
     //EMERGENCIA 
@@ -63,25 +123,10 @@
     .emergencia{
         flex-direction: column;
         .map{
-            width: 400px;
+            align-items: center;
+            justify-content: center;
         }
     }
 
 
-    footer{
-        flex-direction: column;
-        padding: 10px;
-        gap: 15px;
-    }
-}
-
-
-// TABLET 
-@media (min-width: 431px) and (max-width: 768px) {
-    .grid-container {
-        display: grid;
-        align-items: center;
-        justify-content: space-around;
-        gap: 27px;
-    }
 }
